force-app/main/default/objects/GlobalProduct__c/GlobalProduct__c.object-meta.xml
<CustomObject>
    <label>Global Product</label>
    <nameField>
        <label>GlobalProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>