force-app/main/default/objects/GlobalProduct__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective_Date</label>
    <type>Date</type>
</CustomField>