force-app/main/default/objects/GlobalProduct__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration_Date</label>
    <type>Date</type>
</CustomField>