force-app/main/default/objects/GlobalProduct__c/fields/Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID__c</fullName>
    <label>Ext_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>