force-app/main/default/objects/GlobalProduct__c/fields/Global_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Code__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Global Code</label>
    <type>Checkbox</type>
</CustomField>