force-app/main/default/objects/GlobalProduct__c/fields/Global_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Global_Platforms__c</fullName>
    <label>Global Platforms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>