force-app/main/default/objects/GlobalProduct__c/fields/Line_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Service__c</fullName>
    <label>Line of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>