force-app/main/default/objects/GlobalProduct__c/fields/Product_Example_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Product_Example_of_Services__c</fullName>
    <label>Product Example of Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>