force-app/main/default/objects/GlobalProduct__c/fields/Product_Sub_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group_Name__c</fullName>
    <label>Product_Sub_Group_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>