force-app/main/default/objects/GlobalProduct__c/fields/SF_Owner__c.field-meta.xml
<CustomField>
    <fullName>SF_Owner__c</fullName>
    <label>SF Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>