force-app/main/default/objects/GlobalProduct__c/fields/SF_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>SF_RecordTypeId__c</fullName>
    <label>SF RecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>